syntax = "proto3";

option csharp_namespace = "TestcontainersDebugger.Contracts";

service TestcontainersDebugging {
	rpc DebugSession(stream Request) returns (stream Response);
}

message Request {
	oneof request {
		HandshakeRequestPayload handshake_requested = 1;
		AttachToContainerRequestPayload attach_to_container = 2;
	}
}

message AttachToContainerRequestPayload
{
	int32 host_process_id = 1;
	int32 client_process_id = 2;
	int32 session_id = 3;

	string container_id = 4;
	DebugTargetType target_type = 5;
}


message HandshakeRequestPayload
{
	int32 client_process_id = 1;
	int32 nonce = 2;
}

message Response {
	oneof response {
		HandshakeRejectedResponsePayload handshake_rejected = 1;
		HandshakeAcceptedResponsePayload handshake_accepted = 2;
	}
}

message HandshakeRejectedResponsePayload {
	SessionContext session_context = 1;
	int32 nonce = 2;
	string reason = 3;

}

message HandshakeAcceptedResponsePayload {
	SessionContext session_context = 1;
	int32 nonce = 2;
}


message SessionContext {
	int32 host_process_id = 1;
	int32 client_process_id = 2;
	int32 session_id = 3;
}

enum DebugTargetType
{
	CLR = 0;
}

